# NodeEditor

./: README.md  pyproject.toml  save_file.json
example/: .gitignore  my_project.json
scripts/: create_node.py
src/: __init__.py  logger.py  main.py  utils.py  widget_color.py
src/examples/: __init__.py  sample_node.py  sample_nodes.py
src/examples/nodes/: __init__.py  nodes.py
src/nodes/: __init__.py  node_input.py  node_test.py  nodes_content.py  nodes_register.py  nodes_utility.py
src/nodes/classes/: branch_node.py  conditionals_node.py  debug_node.py  debug_print.py  execute_node.py  for_loop_node.py  input_node.py  input_text_node.py  nodenumber.py  number_node.py  passthru_node.py  string_node.py
src/nodes/node/: __init__.py  conditionals_node.py  execute_node.py  for_loop_node.py  input_text_node.py
src/sample/: sample_node.py
src/sockets/: __init__.py  sockets_types.py
src/utils/: __init__.py  graph_state.py
src/widgets/: editor_menubar.py  editor_scene.py  editor_view.py  node_edge.py  node_edge_cutline.py  node_graphics.py  node_socket.py
src/widgets/logic/: left_click.py  undo_redo.py
